--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
             I like food
         </li>
 
-        <p>Where is the pineapple at?</p>
+        asdfasfsafsafsaf
     </ul>
 </body>
 </html>
